# discord_cli

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design.md
src/discord_cli/: __init__.py  __main__.py  cli.py  config.py  formatters.py  mapper.py  models.py  repository.py  service.py
src/discord_cli/presentation/: parser.py
src/discord_cli/presentation_model/: __init__.py  factory.py  responses.py  serializer.py
tests/: test_config.py  test_formatters.py  test_presentation_model.py
